--- a/src/main/resources/templates/loanForm.html
+++ b/src/main/resources/templates/loanForm.html
@@ -10,7 +10,7 @@
   <input type="number" step="0.01" name="loanAmount" id="loanAmount" required>
 
   <label for="loanTermMonths">Loan Term (Months):</label>
-  <input type="number" name="loanTermMonths" id="loanTermMonths" required>
+  <input type="number" name="loanTermMonths" id="loanTermMonths" min="1" required>
 
   <label for="interestRate">Interest Rate (%):</label>
   <input type="number" step="0.01" name="interestRate" id="interestRate" required>
