[FIX] updated readme.md, format table in index.html and loanform.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
     <tr>
         <td>Total</td>
         <td th:text="'KES ' + ${loanRepaymentSchedule.getTotalPaymentAmount()}"></td>
-        <td th:text="'KES ' + ${loanRepaymentSchedule.getTotalPrincipal()}"></td>
+        <td th:text="'KES ' + ${loanRepaymentSchedule.loanAmount}"></td>
         <td th:text="'KES ' + ${loanRepaymentSchedule.getTotalInterest()}"></td>
         <td></td>
     </tr>
