[REFACTOR] change quarterly to weekly in form, updated readme.md

--- a/src/main/resources/templates/loanForm.html
+++ b/src/main/resources/templates/loanForm.html
@@ -25,7 +25,7 @@
       <td><select name="repaymentFrequency" id="repaymentFrequency" required>
         <option value="12">Monthly</option>
         <option value="6">Bi-Monthly</option>
-        <option value="3">Quarterly</option>
+        <option value="3">Weekly</option>
       </select></td>
     </tr>
     <tr><td></td><td><button type="submit">Calculate</button></td></tr>
